# SPIRAL_CLI

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  run.bat  test.py
agents/: __init__.py  coder.py  debugger.py  planner.py  reflector.py  tester.py  verifier.py
core/: intent.py  loop.py  observation.py  state.py
llm/: __init__.py  groq_client.py
memory/: memory.py  workspace_context.py
memory/workspace_context/: file_summaries.json  project_map.json
path/to/: file.py
tools/: exec_tool.py  file_tool.py  terminal_tool.py
ui/: cli.py  mascot.py  mascot_renderer.py  theme.py  token_meter.py
